<resources>
    <string name="app_name">Hi晚安</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

    <string name="title_text">页面</string>
    <string name="home_page">主页</string>
    <string name="good_night">晚安</string>
    <string name="clock">闹钟</string>
    <string name="find">发现</string>
    <string name="setting">设置</string>
    <string name="sleep">睡眠</string>

    <string name="hiwanan">Hi 晚安</string>
    <string name="wananji">晚安集</string>
    <string name="zhushuimian">助睡眠</string>

    <string name="sleep_record">睡眠记录</string>
    <string name="account_name">hello man</string>
    <string name="text_level">晚安达人</string>
    <string name="wanan_daren">晚安达人</string>
    <string name="setting_hi">Hi语音设置</string>
    <string name="about_app">功能介绍</string>
    <string name="clean_source">清除缓存</string>

    <string name="wanan_voice">晚安语音</string>
    <string name="shut_down">OFF</string>
    <string name="open">ON</string>
    <string name="about_app_function">功能介绍，，，</string>
    <string name="switch_on_tips">您已经成功开启Hi语音提醒！</string>
    <string name="switch_off_tips">您已经成功关闭Hi语音提醒！</string>

    <string name="ready_time">预备时间</string>
    <string name="ready_time_point">22 : 00</string>

    <string name="str_press_to_speak_normal">按住 说话</string>
    <string name="str_press_to_speak_recording">松开 结束</string>
    <string name="str_press_to_speak_cancel">松开手指，取消发送</string>
    <string name="str_press_to_speak_tooshort">录音时间过短！</string>
    <string name="str_recorder_dialog">手指上划，取消发送</string>

    <string name="text_logo">Hi WanAn</string>
    <string name="hint_login_user">用户名/电话号码</string>
    <string name="hint_login_pwd">密码</string>
    <string name="hint_login_pwd_confirm">密码确认</string>
    <string name="text_regist">注册</string>
    <string name="text_login">登录</string>
    <string name="sex">性别:</string>
    <string name="group">分组:</string>
    <string name="sex_man">男</string>
    <string name="sex_woman">女</string>
    <string name="type_student">学生党</string>
    <string name="type_worker">工作党</string>

    <string name="only_same_sex">只看异性</string>
    <string name="only_diff_sex">只看同性</string>
    <string name="all_sex_ok">任意性别</string>

    <string name="sex_same_choosed">您已经选择为只看同性</string>
    <string name="sex_diff_choosed">您已经选择为只看异性</string>
    <string name="sex_all_choosed">您已经选择为看任意性别</string>

    <string name="title_text_wanan">晚安吧</string>
    <string name="btn_share">发送</string>
    <string name="type_something">用文字来跟自己说晚安吧 ...</string>
    <string name="just_9_img">图片最多9张</string>
    <string name="add_picture">添加图片</string>
    <string name="btn_save">保存</string>
    <string name="last_time">还有 00 小时 00 分钟</string>
    <string name="music">铃声</string>

    <!--// 注册部分-->
    <string name="usr_null">用户名不能为空！</string>
    <string name="chk_pwd">请检查密码是否合法（长度6-15）！</string>
    <string name="chk_pwd_confirm">确认密码与之前不一致！</string>
    <string name="group_not_nul">请选择您的组别！</string>
    <string name="sex_not_nul">请选择性别！</string>
    <string name="regist_success">恭喜，注册成功！</string>

    <!--//登录-->
    <string name="chk_name_pwd">用户名或密码不能为空！</string>
    <string name="hint_login_email">email</string>
    <string name="logout">退出当前账号</string>
    <string name="account_icon">头像</string>
    <string name="account_level">用户等级</string>
    <string name="user_name">用户名</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>

    <string name="transition">transition</string>
    <string name="transition1">transition_music</string>
    <string name="transition_img">transition_img</string>
    <string name="transition_name">transition_name</string>

    <!--日历-->
    <string name="month_old">八月十二 </string>
    <string name="year_old">\n丙申年 </string>
    <string name="year_zodiac">\n[猴年] </string>
    <string name="month_zodiac">\n丁酉月 </string>
    <string name="day_zodiac">\n丁酉日</string>

    <!--<string name="date">2017.&#160; 00.&#160; 00 &#160;</string>-->
    <string name="year">2017</string>
    <string name="month">01</string>
    <string name="day">01</string>
    <string name="weekend">星期一</string>


    <string name="suit">宜绽放</string>
    <string name="avoio">不宜绽放</string>
    <string name="words">我喜欢我,让蔷薇开出一种结果。孤独的沙漠里,一样盛放的赤裸裸。</string>
    <string name="author">张国荣 &#160; 《我》</string>
    <string name="action_sign_in_short">Sign in</string>

    <string name="category">类型</string>
    <string name="share">分享</string>
    <string-array name="category_values">
        <item>预备时间</item>
        <item>入睡时间</item>
        <item>起床时间</item>
    </string-array>

    <string name="reply">回复</string>
    <string name="user_demo">User Name</string>
    <string name="comma">:</string>
    <string name="write_comment">写评论</string>
    <string name="text_sms_code">获取短信验证码</string>
    <string name="count_down">晚安倒计时</string>
    <string name="duration_plan">设定时长</string>
    <string name="duration_real">实际时长</string>

</resources>
