<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="40dp">


    <ImageView
        android:id="@+id/img1"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_centerVertical="true"
        android:src="@drawable/ic_access_alarm_black_24dp" />

    <TextView
        android:id="@+id/text_ready_time"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_toRightOf="@+id/img1"
        android:gravity="center_vertical"
        android:paddingLeft="20dp"
        android:text="@string/ready_time"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/text_ready_time_point"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_toRightOf="@id/text_ready_time"
        android:gravity="center_vertical"
        android:paddingLeft="40dp"
        android:text="@string/ready_time_point"
        android:textSize="18sp" />

    <Switch
        android:id="@+id/switch_ready_time"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_toRightOf="@+id/text_ready_time_point"
        android:layout_alignParentRight="true"
        android:paddingRight="10dp"
        android:textOn="@string/open"
        android:textOff="@string/shut_down"
        android:gravity="center_vertical"
        android:showText="true"
        android:thumbTextPadding="2dp"
        android:switchPadding="2dp"
        android:switchMinWidth="29sp"/>

</RelativeLayout>