<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:fitsSystemWindows="true">

    <include layout="@layout/layout_title_bar"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="20dp"
        android:background="#FFFFFF">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/wanan_voice"
            android:textSize="18sp"
            android:textColor="#000000"
            android:gravity="center_vertical"
            android:layout_marginLeft="20dp"/>

        <Switch
            android:id="@+id/switch_voice"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:layout_alignParentRight="true"
            android:paddingRight="10dp"
            android:textOff="@string/shut_down"
            android:textOn="@string/open"
            android:showText="true"
            android:thumbTextPadding="2dp"
            android:switchPadding="2dp"
            android:switchMinWidth="29sp"/>
    </RelativeLayout>
</LinearLayout>