<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/card_calendar"
    android:layout_width="match_parent"
    android:layout_height="350dp"
    android:layout_margin="16dp"
    app:cardBackgroundColor="@color/green_2"
    app:cardCornerRadius="5dp"
    app:cardElevation="10dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.7"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="20dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="10dp"
                android:gravity="center_vertical"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/text_month"
                    android:layout_width="15sp"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:text="@string/month"
                    android:textColor="@color/white_smoke"
                    android:textSize="10sp" />

                <TextView
                    android:id="@+id/text_year_old"
                    android:layout_width="15sp"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:text="@string/year_old"
                    android:textColor="@color/white_smoke"
                    android:textSize="10sp" />

                <TextView
                    android:id="@+id/text_year_zodiac"
                    android:layout_width="15sp"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:text="@string/year_zodiac"
                    android:textColor="@color/white_smoke"
                    android:textSize="10sp" />

                <TextView
                    android:id="@+id/text_month_zodiac"
                    android:layout_width="15sp"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:text="@string/month_zodiac"
                    android:textColor="@color/white_smoke"
                    android:textSize="10sp" />

                <TextView
                    android:id="@+id/text_day_zodiac"
                    android:layout_width="15sp"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:text="@string/day_zodiac"
                    android:textColor="@color/white_smoke"
                    android:textSize="10sp" />
            </LinearLayout>

            <TextView
                android:id="@+id/text_date"
                android:layout_width="10sp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_margin="10dp"
                android:gravity="center_horizontal"
                android:text="@string/date"
                android:textColor="@color/white_smoke"
                android:textSize="10sp" />

            <View
                android:layout_width="1.0dp"
                android:layout_height="match_parent"
                android:background="@color/green_3" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="10dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/text_day"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="0.8"
                    android:gravity="center"
                    android:text="@string/day"
                    android:textColor="@color/white_smoke"
                    android:textSize="150sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/text_do_something"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_alignParentBottom="true"
                    android:layout_weight="0.2"
                    android:gravity="center"
                    android:text="@string/do_something"
                    android:textColor="@color/white_smoke"
                    android:textSize="25sp" />
            </LinearLayout>
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1.0dp"
            android:background="@color/green_3" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_margin="10dp"
            android:layout_weight="0.3">

            <TextView
                android:id="@+id/text_words"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/words"
                android:textColor="@color/white_smoke"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/text_author"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_alignParentRight="true"
                android:text="@string/author"
                android:textColor="@color/white_smoke"
                android:textSize="10sp" />

        </RelativeLayout>
    </LinearLayout>
</android.support.v7.widget.CardView>