<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/content_color"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="60dp"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_gravity="center_horizontal">

            <ImageView
                android:id="@+id/img_login_user"
                android:layout_width="35dp"
                android:layout_height="fill_parent"
                android:layout_marginLeft="20dp"
                android:src="@drawable/btn_setting" />

            <EditText
                android:id="@+id/txt_account"
                android:layout_width="250dp"
                android:layout_height="fill_parent"
                android:layout_marginLeft="10dp"
                android:layout_toRightOf="@+id/img_login_user"
                android:hint="@string/hint_login_user"
                android:textColorHint="@color/hint_text_color" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="5dp">

            <ImageView
                android:id="@+id/img_login_pwd"
                android:layout_width="35dp"
                android:layout_height="fill_parent"
                android:layout_marginLeft="20dp"
                android:src="@drawable/img_pwd" />

            <EditText
                android:id="@+id/txt_password"
                android:layout_width="250dp"
                android:layout_height="fill_parent"
                android:layout_marginLeft="10dp"
                android:layout_toRightOf="@+id/img_login_pwd"
                android:hint="@string/hint_login_pwd"
                android:textColorHint="@color/hint_text_color" />

        </RelativeLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="5dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginLeft="20dp"
                android:gravity="center"
                android:text="@string/sex"
                android:textSize="18sp" />

            <CheckBox
                android:id="@+id/checkbox_sex_man"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:background="@drawable/check_box"
                android:button="@null" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginLeft="5dp"
                android:gravity="center"
                android:text="@string/sex_man"
                android:textSize="20sp" />

            <CheckBox
                android:id="@+id/checkbox_sex_woman"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="49dp"
                android:background="@drawable/check_box"
                android:button="@null" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginLeft="5dp"
                android:gravity="center"
                android:text="@string/sex_woman"
                android:textSize="20sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="5dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginLeft="20dp"
                android:gravity="center"
                android:text="@string/sex"
                android:textSize="18sp" />

            <CheckBox
                android:id="@+id/checkbox_type_student"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:background="@drawable/check_box"
                android:button="@null" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginLeft="5dp"
                android:gravity="center"
                android:text="@string/type_student"
                android:textSize="20sp" />

            <CheckBox
                android:id="@+id/checkbox_type_worker"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:background="@drawable/check_box"
                android:button="@null" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginLeft="5dp"
                android:gravity="center"
                android:text="@string/type_worker"
                android:textSize="20sp" />

        </LinearLayout>
    </LinearLayout>

    <Button
        android:id="@+id/btn_register"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:background="@drawable/btn_bg_click"
        android:text="@string/text_regist"
        android:textColor="@color/title_text_color"
        android:textSize="18sp" />


</LinearLayout>