<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.hdu.team.hiwanan.activity.HiUserInfoActivity">

    <include layout="@layout/title_bar_layout"
        android:layout_marginTop="25dp"
        android:layout_height="45dp"
        android:layout_width="match_parent">

    </include>

    <RelativeLayout
        android:id="@+id/btn_icon"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/tab_pressed_btn_bg"
        android:gravity="center_vertical"
        android:paddingLeft="10dp"
        android:paddingRight="10dp">

        <TextView
            android:id="@+id/text_account_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:text="@string/account_icon"
            android:textColor="#000000"
            android:textSize="20sp" />

        <ImageView
            android:id="@+id/img_account"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_alignParentRight="true"
            android:src="@drawable/circle" />

    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#ECEFF1"
        android:paddingLeft="20dp"
        android:paddingRight="20dp" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="58dp"
        android:background="@drawable/tab_pressed_btn_bg"
        android:paddingLeft="10dp"
        android:paddingRight="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:text="@string/user_name"
            android:textColor="#000000"
            android:textSize="20sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:text="@string/account_name"
            android:textColor="#000000"
            android:textSize="20sp" />
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#ECEFF1"
        android:paddingLeft="20dp"
        android:paddingRight="20dp" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="58dp"
        android:background="@drawable/tab_pressed_btn_bg"
        android:paddingLeft="10dp"
        android:paddingRight="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:text="@string/account_level"
            android:textColor="#000000"
            android:textSize="20sp" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentRight="true"
            android:gravity="center"
            android:orientation="vertical">


            <ImageView
                android:id="@+id/img_level"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/img_level" />

            <TextView
                android:id="@+id/text_level"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_level"
                android:textSize="12sp" />
        </LinearLayout>
    </RelativeLayout>
</LinearLayout>
